--- a/Data_Analysis/2-Pandas/Practica/7-Regiment/Regiment.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/7-Regiment/Regiment.ipynb
@@ -16,10 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +42,15 @@
     "        'name': ['Miller', 'Jacobson', 'Ali', 'Milner', 'Cooze', 'Jacon', 'Ryaner', 'Sone', 'Sloan', 'Piger', 'Riani', 'Ali'], \n",
     "        'preTestScore': [4, 24, 31, 2, 3, 4, 24, 31, 2, 3, 2, 3],\n",
     "        'postTestScore': [25, 94, 57, 62, 70, 25, 94, 57, 62, 70, 62, 70]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regimiento = pd.DataFrame(raw_data)"
    ]
   },
   {
@@ -51,10 +63,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>regiment</th>\n",
+       "      <th>company</th>\n",
+       "      <th>name</th>\n",
+       "      <th>preTestScore</th>\n",
+       "      <th>postTestScore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nighthawks</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Miller</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Nighthawks</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Jacobson</td>\n",
+       "      <td>24</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nighthawks</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Ali</td>\n",
+       "      <td>31</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nighthawks</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Milner</td>\n",
+       "      <td>2</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dragoons</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Cooze</td>\n",
+       "      <td>3</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Dragoons</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Jacon</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Dragoons</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Ryaner</td>\n",
+       "      <td>24</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Dragoons</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Sone</td>\n",
+       "      <td>31</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Scouts</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Sloan</td>\n",
+       "      <td>2</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Scouts</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>Piger</td>\n",
+       "      <td>3</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Scouts</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Riani</td>\n",
+       "      <td>2</td>\n",
+       "      <td>62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Scouts</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>Ali</td>\n",
+       "      <td>3</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      regiment company      name  preTestScore  postTestScore\n",
+       "0   Nighthawks     1st    Miller             4             25\n",
+       "1   Nighthawks     1st  Jacobson            24             94\n",
+       "2   Nighthawks     2nd       Ali            31             57\n",
+       "3   Nighthawks     2nd    Milner             2             62\n",
+       "4     Dragoons     1st     Cooze             3             70\n",
+       "5     Dragoons     1st     Jacon             4             25\n",
+       "6     Dragoons     2nd    Ryaner            24             94\n",
+       "7     Dragoons     2nd      Sone            31             57\n",
+       "8       Scouts     1st     Sloan             2             62\n",
+       "9       Scouts     1st     Piger             3             70\n",
+       "10      Scouts     2nd     Riani             2             62\n",
+       "11      Scouts     2nd       Ali             3             70"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regimiento"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +243,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"8\" halign=\"left\">preTestScore</th>\n",
+       "      <th colspan=\"8\" halign=\"left\">postTestScore</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1st</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>8.524475</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>57.666667</td>\n",
+       "      <td>27.485754</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34.25</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2nd</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>14.652645</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>29.25</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>14.057027</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>58.25</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        preTestScore                                                      \\\n",
+       "               count       mean        std  min   25%   50%    75%   max   \n",
+       "company                                                                    \n",
+       "1st              6.0   6.666667   8.524475  2.0  3.00   3.5   4.00  24.0   \n",
+       "2nd              6.0  15.500000  14.652645  2.0  2.25  13.5  29.25  31.0   \n",
+       "\n",
+       "        postTestScore                                                       \n",
+       "                count       mean        std   min    25%   50%   75%   max  \n",
+       "company                                                                     \n",
+       "1st               6.0  57.666667  27.485754  25.0  34.25  66.0  70.0  94.0  \n",
+       "2nd               6.0  67.000000  14.057027  57.0  58.25  62.0  68.0  94.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regimiento.groupby('company').describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,15 +388,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "regiment\n",
+       "Dragoons      15.50\n",
+       "Nighthawks    15.25\n",
+       "Scouts         2.50\n",
+       "Name: preTestScore, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regimiento.groupby('regiment')['preTestScore'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,15 +424,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company\n",
+       "1st     6.666667\n",
+       "2nd    15.500000\n",
+       "Name: preTestScore, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "regimiento.groupby('company')['preTestScore'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +468,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x000001C5C09F0A50>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regimiento.groupby('company')['regiment']\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
