--- a/Data_Analysis/3-Sources/Archivos/Teoría/0-Lectura Escritura.ipynb
+++ b/Data_Analysis/3-Sources/Archivos/Teoría/0-Lectura Escritura.ipynb
@@ -4249,6 +4249,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "os = sistema operativo en inglés"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -4256,7 +4263,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Miguel Angel\\\\Documents\\\\Bootcamp_DS_1_22\\\\ds_thebridge_1_22\\\\2-Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
+       "'c:\\\\Users\\\\laura\\\\Desktop\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
       ]
      },
      "execution_count": 1,
@@ -4266,7 +4273,8 @@
    ],
    "source": [
     "import os\n",
-    "os.getcwd()"
+    "os.getcwd() \n",
+    "# ruta donde está el archivo que se está ejecutando\n"
    ]
   },
   {
@@ -4343,7 +4351,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Miguel Angel\\\\Documents\\\\Bootcamp_DS_1_22\\\\ds_thebridge_1_22\\\\2-Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
+       "'c:\\\\Users\\\\laura\\\\Desktop\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
       ]
      },
      "execution_count": 2,
@@ -4357,27 +4365,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['data',\n",
-       " 'Ejemplo XML.ipynb',\n",
+       "['0-Lectura Escritura.ipynb',\n",
+       " '1-JSON.ipynb',\n",
+       " '2-Ejemplo XML.ipynb',\n",
+       " 'data',\n",
        " 'ejemplo.xml',\n",
        " 'fichero.txt',\n",
        " 'img',\n",
        " 'importante',\n",
-       " 'JSON.ipynb',\n",
        " 'laligaZIP.csv',\n",
-       " 'Lectura Escritura PROF.ipynb',\n",
-       " 'Lectura Escritura.ipynb',\n",
        " 'main.json',\n",
        " 'output.xml']"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4395,17 +4402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook Ejemplo XML.ipynb\n",
-      "Notebook JSON.ipynb\n",
-      "Notebook Lectura Escritura PROF.ipynb\n",
-      "Notebook Lectura Escritura.ipynb\n"
+      "Notebook 0-Lectura Escritura.ipynb\n",
+      "Notebook 1-JSON.ipynb\n",
+      "Notebook 2-Ejemplo XML.ipynb\n"
      ]
     }
    ],
@@ -4424,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4455,24 +4461,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria',\n",
-       "  ['.ipynb_checkpoints', 'data', 'img'],\n",
-       "  ['importante', 'laligaZIP.csv', 'Lectura Escritura.ipynb']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\.ipynb_checkpoints',\n",
-       "  [],\n",
-       "  ['Lectura Escritura-checkpoint.ipynb']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\data',\n",
-       "  ['.ipynb_checkpoints'],\n",
+       "[('c:\\\\Users\\\\laura\\\\Desktop\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría',\n",
+       "  ['data', 'img'],\n",
+       "  ['0-Lectura Escritura.ipynb',\n",
+       "   '1-JSON.ipynb',\n",
+       "   '2-Ejemplo XML.ipynb',\n",
+       "   'ejemplo.xml',\n",
+       "   'fichero.txt',\n",
+       "   'importante',\n",
+       "   'laligaZIP.csv',\n",
+       "   'main.json',\n",
+       "   'output.xml']),\n",
+       " ('c:\\\\Users\\\\laura\\\\Desktop\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría\\\\data',\n",
+       "  ['extracted_files'],\n",
        "  ['data_file.json',\n",
        "   'dog_breeds.txt',\n",
        "   'encoding.csv',\n",
        "   'file_write.txt',\n",
+       "   'file_writes.txt',\n",
        "   'laliga.csv',\n",
        "   'laliga.xlsx',\n",
        "   'laliga4.csv',\n",
@@ -4486,29 +4498,25 @@
        "   'Musical_Instruments_5.json',\n",
        "   'pepe.json',\n",
        "   'poblacion.csv',\n",
-       "   '~$laliga.xlsx']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\data\\\\.ipynb_checkpoints',\n",
+       "   'pregunta_marcos.py']),\n",
+       " ('c:\\\\Users\\\\laura\\\\Desktop\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría\\\\data\\\\extracted_files',\n",
        "  [],\n",
-       "  ['data_file-checkpoint.json',\n",
-       "   'dog_breeds-checkpoint.txt',\n",
-       "   'file_write-checkpoint.txt',\n",
-       "   'laliga-checkpoint.csv',\n",
-       "   'laliga4-checkpoint.csv',\n",
-       "   'laligaWrite-checkpoint.csv']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\img',\n",
+       "  ['laligaZIP.csv']),\n",
+       " ('c:\\\\Users\\\\laura\\\\Desktop\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría\\\\img',\n",
        "  [],\n",
        "  ['ejercicio.png',\n",
        "   'ejercicios.png',\n",
        "   'encoding.jpg',\n",
        "   'error.png',\n",
        "   'file.png',\n",
+       "   'importante',\n",
        "   'json_image.png',\n",
        "   'path.png',\n",
        "   'python.jpg',\n",
        "   'python.png'])]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4525,7 +4533,7 @@
    "metadata": {},
    "source": [
     "¿Qué podemos hacer dentro de un directorio, aparte de listar ficheros y subdirectorios? Las principales operaciones serían:\n",
-    "- Crear o eliminar directorios\n",
+    "- Crear o eliminar directorios (carpeta o archivo)\n",
     "- Crear o eliminar ficheros\n",
     "- Mover ficheros"
    ]
@@ -4639,7 +4647,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# __file__ es un archivo, da la ruta completa. \n",
+    "# os.chdir() no se puede cambiar a __file__ porque es un ARCHIVO.\n",
+    "# no puede haber un archivo dentro de otro, por eso no puedes."
+   ]
   }
  ],
  "metadata": {
