repaso fin de semana

--- a/Data_Analysis/2-Pandas/Practica/5-Alcohol_Consumption/Alcohol_Consumption.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/5-Alcohol_Consumption/Alcohol_Consumption.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "[193 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,6 @@
        "      <th>wine_servings</th>\n",
        "      <th>total_litres_of_pure_alcohol</th>\n",
        "      <th>continent</th>\n",
-       "      <th>beer_mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -277,7 +276,6 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>AS</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -287,7 +285,6 @@
        "      <td>54</td>\n",
        "      <td>4.9</td>\n",
        "      <td>EU</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -297,7 +294,6 @@
        "      <td>14</td>\n",
        "      <td>0.7</td>\n",
        "      <td>AF</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -307,7 +303,6 @@
        "      <td>312</td>\n",
        "      <td>12.4</td>\n",
        "      <td>EU</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -317,11 +312,9 @@
        "      <td>45</td>\n",
        "      <td>5.9</td>\n",
        "      <td>AF</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -337,7 +330,6 @@
        "      <td>3</td>\n",
        "      <td>7.7</td>\n",
        "      <td>SA</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>189</th>\n",
@@ -347,7 +339,6 @@
        "      <td>1</td>\n",
        "      <td>2.0</td>\n",
        "      <td>AS</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>190</th>\n",
@@ -357,7 +348,6 @@
        "      <td>0</td>\n",
        "      <td>0.1</td>\n",
        "      <td>AS</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>191</th>\n",
@@ -367,7 +357,6 @@
        "      <td>4</td>\n",
        "      <td>2.5</td>\n",
        "      <td>AF</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>192</th>\n",
@@ -377,11 +366,10 @@
        "      <td>4</td>\n",
        "      <td>4.7</td>\n",
        "      <td>AF</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>193 rows × 7 columns</p>\n",
+       "<p>193 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -398,23 +386,23 @@
        "191       Zambia             32               19              4   \n",
        "192     Zimbabwe             64               18              4   \n",
        "\n",
-       "     total_litres_of_pure_alcohol continent  beer_mean  \n",
-       "0                             0.0        AS        NaN  \n",
-       "1                             4.9        EU        NaN  \n",
-       "2                             0.7        AF        NaN  \n",
-       "3                            12.4        EU        NaN  \n",
-       "4                             5.9        AF        NaN  \n",
-       "..                            ...       ...        ...  \n",
-       "188                           7.7        SA        NaN  \n",
-       "189                           2.0        AS        NaN  \n",
-       "190                           0.1        AS        NaN  \n",
-       "191                           2.5        AF        NaN  \n",
-       "192                           4.7        AF        NaN  \n",
+       "     total_litres_of_pure_alcohol continent  \n",
+       "0                             0.0        AS  \n",
+       "1                             4.9        EU  \n",
+       "2                             0.7        AF  \n",
+       "3                            12.4        EU  \n",
+       "4                             5.9        AF  \n",
+       "..                            ...       ...  \n",
+       "188                           7.7        SA  \n",
+       "189                           2.0        AS  \n",
+       "190                           0.1        AS  \n",
+       "191                           2.5        AF  \n",
+       "192                           4.7        AF  \n",
        "\n",
-       "[193 rows x 7 columns]"
+       "[193 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +536,7 @@
        "SA          12.0   62.416667  88.620189  1.0   3.0   12.0   98.50  221.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -581,13 +569,13 @@
        "Name: total_litres_of_pure_alcohol, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "drinks.groupby('continent')['total_litres_of_pure_alcohol'].mean()."
+    "drinks.groupby('continent')['total_litres_of_pure_alcohol'].mean()"
    ]
   },
   {
@@ -599,21 +587,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3614385596.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[17], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    drinks.groupby('continent')[].median()\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>beer_servings</th>\n",
+       "      <th>spirit_servings</th>\n",
+       "      <th>wine_servings</th>\n",
+       "      <th>total_litres_of_pure_alcohol</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>89</td>\n",
+       "      <td>132</td>\n",
+       "      <td>54</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>245</td>\n",
+       "      <td>138</td>\n",
+       "      <td>312</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>EU</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>217</td>\n",
+       "      <td>57</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>333</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>111</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>AS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>32</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>64</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>AF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>193 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         country  beer_servings  spirit_servings  wine_servings  \\\n",
+       "0    Afghanistan              0                0              0   \n",
+       "1        Albania             89              132             54   \n",
+       "2        Algeria             25                0             14   \n",
+       "3        Andorra            245              138            312   \n",
+       "4         Angola            217               57             45   \n",
+       "..           ...            ...              ...            ...   \n",
+       "188    Venezuela            333              100              3   \n",
+       "189      Vietnam            111                2              1   \n",
+       "190        Yemen              6                0              0   \n",
+       "191       Zambia             32               19              4   \n",
+       "192     Zimbabwe             64               18              4   \n",
+       "\n",
+       "     total_litres_of_pure_alcohol continent  \n",
+       "0                             0.0        AS  \n",
+       "1                             4.9        EU  \n",
+       "2                             0.7        AF  \n",
+       "3                            12.4        EU  \n",
+       "4                             5.9        AF  \n",
+       "..                            ...       ...  \n",
+       "188                           7.7        SA  \n",
+       "189                           2.0        AS  \n",
+       "190                           0.1        AS  \n",
+       "191                           2.5        AF  \n",
+       "192                           4.7        AF  \n",
+       "\n",
+       "[193 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "drinks.groupby('continent')[].median()"
+    "drinks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method GroupBy.median of <pandas.core.groupby.generic.SeriesGroupBy object at 0x00000252F86C4B10>>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df2 = drinks.groupby('continent', as_index=False)['total_litres_of_pure_alcohol'].median\n",
+    "# df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -624,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
