--- a/Data_Analysis/EDA/1-Definicion_EDA.ipynb
+++ b/Data_Analysis/EDA/1-Definicion_EDA.ipynb
@@ -22,12 +22,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Escribe el título del proyecto en Markdown"
+    "# ANALISIS SALARIAL: OPORTUNIDADES EN EL CAMPO DEL DATA SCIENCE"
    ]
   },
   {
@@ -38,12 +36,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Describe brevemente el tema del proyecto en Markdown"
+    "La realización de un estudio relacionando el nivel salarial de un grupo de población con su género, nivel de experiencia, nivel educativo y tipo de puesto de trabajo."
    ]
   },
   {
@@ -57,26 +53,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define aquí lo que será la hipótesis de tu proyecto.\n",
-    "Puede que tengas más de una, pero tu proyecto lo harás teniendo una principal hipótesis."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Escribe tu hipótesis principal en Markdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Escribe más hipótesis si las hubiera en Markdown"
+    "**Hipótesis 1 :**\n",
+    "\n",
+    "Los salarios de los puestos de trabajos relacionados con data science son mayores que los de otros sectores con mismo nivel educativo.\n",
+    "\n",
+    "**Hipótesis 2 :**\n",
+    "\n",
+    "Dentro del sector data science ¿Son iguales los salarios entre hombres y mujeres con el mismo puesto de trabajo y nivel educativo?\n",
+    "\n",
+    "\n",
+    "**Hipótesis 3 :**\n",
+    "Dentro del sector Data Science ¿Existe una relación positiva entre los años de experiencia y el salario?"
    ]
   },
   {
@@ -102,12 +89,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# describe la fuente de tus datos e incluye los links en Markdown"
+    "Los datos han sido obtenidos de la web [Kaggle](www.kaggle.com).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DATA SET 1**\n",
+    "\n",
+    "[Data set](https://www.kaggle.com/datasets/arnabchaki/data-science-salaries-2023)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DATA SET 2**\n",
+    "\n",
+    "[Data set 2](https://www.kaggle.com/datasets/mohithsairamreddy/salary-data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Partiendo de dos data set con datos sobre salarios, nivel de educación, género, nivel de experiencia "
    ]
   },
   {
@@ -119,20 +131,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Primer dataset"
+    "import numpy as np \n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Siguiente dataset..."
+    "df1 = pd.read_csv(r'C:/Users/laura/Desktop/Salary_Data.csv', sep = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6704, 6)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Education Level</th>\n",
+       "      <th>Job Title</th>\n",
+       "      <th>Years of Experience</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>Software Engineer</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>90000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Master's</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>65000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>45.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Senior Manager</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>Sales Associate</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>60000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Master's</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>200000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age  Gender Education Level          Job Title  Years of Experience  \\\n",
+       "0  32.0    Male      Bachelor's  Software Engineer                  5.0   \n",
+       "1  28.0  Female        Master's       Data Analyst                  3.0   \n",
+       "2  45.0    Male             PhD     Senior Manager                 15.0   \n",
+       "3  36.0  Female      Bachelor's    Sales Associate                  7.0   \n",
+       "4  52.0    Male        Master's           Director                 20.0   \n",
+       "\n",
+       "     Salary  \n",
+       "0   90000.0  \n",
+       "1   65000.0  \n",
+       "2  150000.0  \n",
+       "3   60000.0  \n",
+       "4  200000.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.read_csv(r'C:/Users/laura/Desktop/ds_salaries.csv', sep = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3755, 11)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>remote_ratio</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Principal Data Scientist</td>\n",
+       "      <td>80000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>85847</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>100</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>ML Engineer</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>30000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>ML Engineer</td>\n",
+       "      <td>25500</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>25500</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>175000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>175000</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>100</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>100</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   work_year experience_level employment_type                 job_title  \\\n",
+       "0       2023               SE              FT  Principal Data Scientist   \n",
+       "1       2023               MI              CT               ML Engineer   \n",
+       "2       2023               MI              CT               ML Engineer   \n",
+       "3       2023               SE              FT            Data Scientist   \n",
+       "4       2023               SE              FT            Data Scientist   \n",
+       "\n",
+       "   salary salary_currency  salary_in_usd employee_residence  remote_ratio  \\\n",
+       "0   80000             EUR          85847                 ES           100   \n",
+       "1   30000             USD          30000                 US           100   \n",
+       "2   25500             USD          25500                 US           100   \n",
+       "3  175000             USD         175000                 CA           100   \n",
+       "4  120000             USD         120000                 CA           100   \n",
+       "\n",
+       "  company_location company_size  \n",
+       "0               ES            L  \n",
+       "1               US            S  \n",
+       "2               US            S  \n",
+       "3               CA            M  \n",
+       "4               CA            M  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
    ]
   },
   {
@@ -162,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
